fix(tempo): correct metronome position on replay while in `jump` mode
Additional changes:
- Clarified the 3 modes `normal`, `jump` and `fix` that define the
metronome behavior depending on the bpm.
- These modes are now managed better with 3 new functions: `initMode`,
`getMode` and `isMode`.

--- a/css/widgets/metronome.css
+++ b/css/widgets/metronome.css
@@ -40,17 +40,19 @@
             margin-left: 100%;
         }
     }
-    &.instant {
+
+    &.jump, &.instant {
         .metronome-circle {
             transition: none !important;
         }
     }
-    &.fixed {
+    &.fix {
         .metronome-circle {
             margin-left: 0 !important;
             background-color: var(--invert);
         }
     }
+
     &.disabled {
         .metronome-circle {
             margin-left: 0 !important;
